--- a/Hero.API/Hero.API.csproj
+++ b/Hero.API/Hero.API.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Service\Service.csproj" />
     <ProjectReference Include="Service\Service.csproj" />
   </ItemGroup>
 
